--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,23 @@
+# Firebase
+.firebase/
+firebase-debug.log
+
 # Dependencies
 node_modules/
 package-lock.json
 
-# Environment files
+# Environment variables
 .env
 .env.local
 .env.*.local
 
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.sublime-project
 *.sublime-workspace
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
